--- a/rss_feed/rss_ui.css
+++ b/rss_feed/rss_ui.css
@@ -86,3 +86,11 @@
 #editButton {
 	margin-top: 10px;
 }
+
+#editButtonIcon {
+	margin-top: 10px;
+	margin-left: 10px;
+	width: 22px;
+	height: 22px;
+	background-image: url('http://opensocialuser.github.io/rss_feed/settings_icon.png');
+}
